# flask-blog

./: .flaskenv  config.py  pyproject.toml  run.py
flaskblog/: __init__.py  forms.py  models.py  routes.py
flaskblog/templates/: base.html
migrations/versions/: 00483534a1f7_posts_table.py  77b9f89e4d8a_users_table.py
