[tool.poetry]
name = "flaskblog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@>"]
readme = "README.md"
packages = [{include = "flaskblog"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
