[tool.poetry]
name = "flaskblog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@>"]
readme = "README.md"
packages = [{include = "flaskblog"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
flask-wtf = "^1.2.1"
flask-migrate = "^4.0.5"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
